<resources>
    <string name="app_name" >Standard atmosphere</string>
    <string name="calculate">Calculate </string>
    <string name="Description">About</string>
    <string name="calcAltitudeActivName01">Input parameters</string>
    <string name="calcAltitudeActivName02">Output parameters</string>
    <string name="altitudeTextView">Altitude, Km</string>
    <string name="machTextView">Mach number</string>
    <string name="pressureTextView">Pressure</string>
    <string name="fullPressureTextView">Full pressure</string>
    <string name="fullTempTextView">Full temperature</string>
    <string name="dynamicPressTextView">Dynamic pressure</string>
    <string name="temperatureTextView">Temperature</string>
    <string name="densityTextView">Density</string>
    <string name="altitudeHint">Enter, Km</string>
    <string name="machHint">Enter</string>
    <string name="resultHint">Result</string>
    <string name="plainText">0</string>
    <string name="velocityTextView">Velocity</string>
    <string name="helpTag">Parameter info</string>

    //graph activity resources
    <string name="graphButton" >Graph mode</string>
    <string name="graphTextView">Altitude range, Km</string>
    <string name="altitudeRange1">From</string>
    <string name="altitudeRange2">To</string>

    //help resources
    <string name="altitudeHelpString">Enter altitude above the Earth surface in kilometers.</string>
    <string name="machHelpString">Enter flight Mach number or velocity in m/s. This values use to calculate inlet flow full parameters.
                                  If this value equals zero only static parameters will be displayed. Max Mach number value equals 21 because for so high
                                  velocities you should use more complicated models.</string>
    <string name="pressureHelpString">Air static pressure in Pa. </string>
    <string name="densityHelpString" >Air density in kg/m^3. </string>
    <string name="temperatureHelpString">Air static temperature in K.</string>
    <string name="fullPressureHelpString">Full pressure of inlet flow in Pa. Enter Mach number or flow velocity to calculate this parameter. Enter Mach number to calculate this value.</string>
    <string name="fullTemperatureHelpString">Full temperature of inlet flow in K. Enter Mach number or flow velocity to calculate this parameter. Enter Mach number to calculate this value.</string>
    <string name="sonicSpeedHelpString">Sonic speed of the air in m/s for given parameters.</string>
    <string name="velocityHelpString">Velocity in m/s or Mach number value of inlet flow. </string>
    <string name="dynamicPressHelp">Dynamic pressure of the inlet flow in Pa with given altitude and Mach number. Enter Mach number or flow velocity to calculate this value.</string>
    <string name="graphHelpString">Enter altitude range in kilometers for parameters
        changing. Press OK button to generate graph. If no altitude was given program will work with default
        altitude range up to 50 kilometers.</string>

    //menu resources
    <string name="menuTitle">Select mode</string>
    <string name="menuCalculate">Calculate</string>
    <string name="menuGraph">Graph mode</string>
    <string name="menuAbout">About</string>

    //About activity resources
    <string name="About">
        This program intended to calculate atmosphere parameters on altitude from 0 to 85 kilometers
        above the Earth surface. Also it has possibility to evaluate full parameters of inlet flow
        during the flight with given altitude and Mach number.\n\n
        Program:         Batura Stas\n
        Science core:    Sidorov Rodion\n
    </string>

    <string name="graphOkbutton">Ok</string>
    <string name="exit_menu_text">Quit</string>
    <string name="sonicSpeedTextView">Sonic speed</string>
    <string name="ratingTextView">Thx for rating us!</string>
    <string name="ratingButtn">Rate</string>
    <string name="velocitySpinner">Velocity, m/s</string>
    <string name="negative_mach">Wrong Mach number value</string>
    <string name="high_mach">Too high Mach number value</string>
    <string name="negat_altitude">Wrong altitiude value</string>
    <string name="high_altitude">Maximum altitude exceeding</string>

</resources>
