<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height"
            android:checkedButton="@+id/pressureRadioButton"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RadioButton
                android:id="@+id/pressureRadioButton"
                style="@style/radioButtonStyle"
                android:text="@string/pressureTextView"
                android:paddingLeft="8dp"/>

            <RadioButton
                android:id="@+id/densityRadioButton"
                style="@style/radioButtonStyle"
                android:text="@string/densityTextView" />

            <RadioButton
                android:id="@+id/temperatureRadioButton"
                style="@style/radioButtonStyle"
                android:text="@string/temperatureTextView"
                android:paddingRight="8dp"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <TextView
            android:text="@string/graphTextView"
            style="@style/graph_activity_basic_style"
            android:layout_width="@dimen/input_item_width"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/graphEditText1"
            android:hint="@string/altitudeRange1"
            style="@style/input_basic_styleTextView"
            android:layout_width="@dimen/edit_graphText_width"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/graphEditText2"
            android:hint="@string/altitudeRange2"
            style="@style/input_basic_styleTextView"
            android:layout_width="@dimen/edit_graphText_width"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/graphOkButton"
            style="@style/help_icon_style"
            android:background="@color/colorPrimary"
            android:text="@string/graphOkbutton" />

        <ImageButton
            android:id="@+id/graphHelp"
            style="@style/help_icon_style"
            android:contentDescription="@string/helpTag"
            android:onClick="graphHelpOnClick"
            android:paddingLeft="8dp" />
    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
