<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menuTitle"
        app:showAsAction="never"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuCalculate"
            android:orderInCategory="100"
            android:title="@string/menuCalculate"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menuGraph"
            android:orderInCategory="100"
            android:title="@string/menuGraph"
            app:showAsAction="never"/>
    </group>
</menu>