<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculateActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.batura.stas.atmosphere.CalculateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcAltitudeActivName01"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:fontFamily="sans-serif"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:text="@string/altitudeTextView"
                style="@style/input_basic_style" />
            <EditText
                android:id="@+id/altitudeValue"
                android:hint="@string/altitudeHint"
                style="@style/input_basic_style"/>
            <ImageButton
                android:id="@+id/altitudeHelp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dip" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:text="@string/machTextView"
                style="@style/input_basic_style" />
            <EditText
                android:id="@+id/machValue"
                android:hint="@string/altitudeHint"
                style="@style/input_basic_style"/>
            <ImageButton
                android:id="@+id/machHelp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dip" />
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcAltitudeActivName02"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:fontFamily="sans-serif"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <TextView
            android:text="@string/pressureTextView"
            style="@style/output_basic_style" />
        <TextView
            android:id="@+id/pressureValue"
            android:hint="@string/resultHint"
            style="@style/output_basic_style"/>
        <ImageButton
            android:id="@+id/pressureHelp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dip" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <TextView
            android:text="@string/temperatureTextView"
            style="@style/output_basic_style" />
        <TextView
            android:id="@+id/temperatureValue"
            android:hint="@string/resultHint"
            style="@style/output_basic_style"/>
        <ImageButton
            android:id="@+id/temperatureHelp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dip" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <TextView
            android:text="@string/densityTextView"
            style="@style/output_basic_style" />
        <TextView
            android:id="@+id/densityValue"
            android:hint="@string/resultHint"
            style="@style/output_basic_style"/>
        <ImageButton
            android:id="@+id/densityHelp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dip" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <TextView
            android:text="@string/velocityTextView"
            style="@style/output_basic_style" />
        <TextView
            android:id="@+id/velocityValue"
            android:hint="@string/resultHint"
            style="@style/output_basic_style"/>
        <ImageButton
            android:id="@+id/velocityHelp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dip" />
    </LinearLayout>




</LinearLayout>
