<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/activityPaddingLateral"
    android:paddingLeft="@dimen/activityPaddingLateral">

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:paddingTop="8dp"
        android:textColor="@color/primaryText"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/ratingTextView"
        android:textColor="@color/secondaryText"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:clickable="true"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.5"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/ratingButtn"
        android:layout_marginBottom="8dp"/>

</RelativeLayout>